2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated ja.po
	* src/ja.po

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.14.0
	* src/configure.ac

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated ja.po and fr.po. Great thanks for french translators and
	Sebastien WILLEMIJNS.
	* po/fr.po
	* po/ja.po	

2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added configure option to enable/disable epoll support.
	* configure.ac

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated man page.
	* doc/aria2c.1.txt
	* doc/aria2c.1
	* doc/aria2c.1.html

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added missing default value '5' to the usage of --split option.
	* src/HelpItemFactory.cc

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Filled up pieces based on the number of missing blocks, rather than
	simplay the number of piece * block length.
	* src/BtRequestFactory.h
	* src/DefaultBtInteractive.cc
	* src/DefaultBtInteractive.h
	* src/DefaultBtRequestFactory.cc
	* src/DefaultBtRequestFactory.h
	* src/Piece.cc
	* src/Piece.h
	* test/BitfieldManTest.cc
	* test/DefaultBtRequestFactoryTest.cc
	* test/MockBtRequestFactory.h
	
2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made _epEvents a member variable.
	* src/DownloadEngine.cc
	* src/DownloadEngine.h

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Cancel download if http redirect is bounded more than 20 times.
	* src/AbstractCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/Request.cc
	* src/Request.h
	* test/RequestTest.cc

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed unhandled exception(removed keyword `new').
	* src/SocketCore.cc (initEPOLL)

2008-06-17  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
	
	Removed visit(const MetaEntry*)
	* src/MetaEntryVisitor.h: