@@ -1,5 +1,10 @@
 2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Added build test script
+	* build_test.sh
+	
+2008-06-20  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Updated ja.po
 	* src/ja.po
 
